--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,9 +2,9 @@
 name = "pacm"
 version = "0.1.0"
 edition = "2021"
-license = "MIT OR Apache-2.0"
+license = "ICL-1.0"
 description = "Fast, disk-efficient, secure JavaScript/TypeScript package manager (prototype)"
-repository = "https://github.com/infinitejs/pacm"
+repository = "https://github.com/pacmpkg/pacm"
 keywords = ["package-manager", "npm", "pnpm", "javascript", "node"]
 categories = ["command-line-utilities", "development-tools"]
 readme = "README.md"
